--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,19 +4,19 @@
     --dark: #4270B2;
     --gray: grey;
 }
-
+/*Global variables*/
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-
+/*Body */
 body {
     min-height: 100vh;
     width: 100%;
     background-color: var(--light);
 }
-
+/*Header*/
 .jumbotron {
     background-color: var(--dark);
     color: var(--light);
@@ -25,29 +25,27 @@ body {
     font-family: 'Kanit', sans-serif;
 
 }
-
-
+/*Search Button*/
 #search-button {
     width: 18.75rem;
     background-color: var(--dark);
     color: var(--light);
 }
-
+/*Search Input*/
 #search-input {
     width: 17rem;
 }
-
+/*Sidebar*/
 .sidebar {
     position: fixed;
     height: 100%;
     width: 300px;
     margin-left: 1rem;  
 }
-
 #current-condition {
     margin: 1rem;
 }
-
+/*Home section*/
 .home-section {
     /* display: flex;
     flex-wrap: wrap; */
@@ -56,67 +54,50 @@ body {
     width: calc(100% - 300px);
     left: 350px;
 }
-
+/*Botttom Section*/
 .bottom-section {
     position: relative;
     width: calc(100% - 300px);
     left: 350px;
 }
-
+/*cards*/
 .card-deck {
     width: 1000px;
 }
-
+/*Body section for populating recent search city buttons*/
 .future-body {
     background-color: var(--dark);
     color: var(--light);
     padding: 1rem;
 }
-
+/*Recent search buttons*/
 .btn-secondary {
     background-color: var(--gray);
     width: 18.75rem;
     margin-bottom: 5px;
 }
-
+/*List of weather parameters*/
+/*group name*/
 dt {
     float: left;
     margin-right: 7px;
 }
-
+/*5 day cards created by js*/
 .card-future {
     width: 165px;
 }
-
 .card-body {
     background-color: var(--dark);
 }
-
+/*Headings*/
 h2, h5 {
     color: var(--light);
 }
-
+/*Description List*/
 dl {
     color: var(--light);
 }
 
 .current-header {
     position: relative;
-}
-
-.favorable {
-    background-color: green;
-}
-
-.moderate {
-    background-color: yellow;
-    color: black;
-}
-
-.severe {
-    background-color: red;
-}
-
-#weather-day-index {
-    padding: 2px;
 }
